src/objects/PKB_Content__c.object
<CustomObject>
    <description>The content for the Home, Contact, and Community pages of the Support Portal</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this field should be active(display) or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>The contents of the section of the section(HTML)</description>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Content__c</fullName>
        <label>Text Content</label>
        <length>25500</length>
        <type>LongTextArea</type>
    </fields>
    <label>PKB_Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllPages</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Content__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Pages</label>
    </listViews>
    <nameField>
        <label>PKB_Content</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Portal Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>